@startuml nushn

hide circle

entity User {
    * id: <<uuid>>
    ---
    * username: string
    * email: string
    * hashedPassword: string
    * salt: string
    * createdAt: timestamp
    editedAt: timestamp
    deletedAt: timestamp
    avatar: <<url>>
}

entity Subpage {
    *id: <<uuid>>
    ---
    * name: string
    * description: string
    * icon: <<url>>
    deletedAt: timestamp
    * createdAt: timestamp
}

entity Label {
    *id: <<uuid>>
    ---
    * subpageId: <<FK>>
    * name: string
    orderInSubpage: <<FK>>
    deletedAt: timestamp
    * createdAt: timestamp
}

entity Role {
    * id: <<uuid>>
    ---
    * userId: <<FK>>
    * subpageId: <<FK>>
    * roleType: enum
    deletedAt: timestamp
}

entity Task {
    * id: <<uuid>>
    ---
    * taskName: string
    * done: boolean
    * dueDate: Date
    * labelId: <<FK>>
    * creatorId: <<FK>>
    orderInList: <<FK>>
    orderInLabel: <<FK>>
    * content: string
    * createdAt: timestamp
    deletedAt: timestamp
    image: string
}

entity SubpageEdit {
    * id: <<uuid>>
    ---
    * editorId: <<FK>>
    * subpageId: <<FK>>
    * editedAt: timestamp
}

User }|..o{ Task : has
User ||..o{ Role : has
Subpage ||..o{ Label : has
Label ||..o{ Task : has

Subpage ||..o{ SubpageEdit
User ||..o{ SubpageEdit

Role }|..|| Subpage : has
' User ||..o{ Subpage : has
@enduml
